# RabbitMQ-crash-course

./: LICENSE  README.md
consumer/: .env  README.md  go.mod  go.sum  main.go  run.sh
consumer/dto/: imageReport.go
consumer/queues/: configuration.go  listener.go
consumer/services/imageProcessingService/: client.go  config.go
consumer/util/: config.go
docs/: RabbitMQ.md
image-processing/: README.md  pyproject.toml  server.py
image-processing/app/: __init__.py  config.py  workshop.py
image-processing/processor/: __init__.py  load_images.py
producer/: README.md  pyproject.toml  server.py
producer/app/: config.py  workshop.py
storage-service/: .env  go.mod  main.go  run.sh
storage-service/dto/: imageReport.go
storage-service/queues/: configuration.go  listener.go
storage-service/util/: config.go
