[tool.poetry]
name = "processor"
version = "0.1.0"
description = "License Plate image processing"
authors = ["alexis-aguirre <alexis.aguirre@wizeline.com>", "soyantonio-w <jesus.perez@wizeline.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
